[gd_scene load_steps=5 format=3 uid="uid://x8q617q250qp"]

[ext_resource type="Script" path="res://src/main/component/Scripts/projectile_base.gd" id="1_qesg0"]
[ext_resource type="Script" path="res://src/main/common/script_classes/hit_box.gd" id="2_7jmh0"]
[ext_resource type="Script" path="res://src/main/common/script_classes/hurt_box.gd" id="3_het1i"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vbl2c"]
properties/0/path = NodePath(".:scale")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Graphics:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="ProjectileBase" type="CharacterBody2D"]
z_index = 19
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_qesg0")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vbl2c")

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]

[node name="HitBox" type="Area2D" parent="Graphics"]
collision_layer = 0
collision_mask = 16
script = ExtResource("2_7jmh0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HitBox"]
debug_color = Color(0.968627, 0, 0.454902, 0.419608)

[node name="HurtBox" type="Area2D" parent="Graphics"]
collision_layer = 8
collision_mask = 0
script = ExtResource("3_het1i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HurtBox"]
debug_color = Color(0, 0.643137, 0.301961, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="hit" from="Graphics/HitBox" to="." method="_on_hit_box_hit"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
